--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
     - index.qmd
     - intro_to_r.qmd
     - descriptive_stats.qmd
+    - visual.qmd
     - references.qmd
 
 bibliography: references.bib
