--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,7 @@ book:
     - final_exam.qmd
     - conclusion.qmd
     - references.qmd
+    - glossary.qmd
 
 bibliography: references.bib
 csl: the-auk.csl
