Full site render
Adding a new page - pick the test

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ book:
     - anova1.qmd
     - anova2.qmd
     - cor_reg.qmd
+    - picktest.qmd
     - final_exam.qmd
     - conclusion.qmd
     - glossary.qmd
